# DevOps-Course-Starter

./: .env.j2  .env.template  .env.testing  .gitignore  README.md  ansible_inv  dockerfile  playbook  pyproject.toml  todoapp.service
todo_app/: app.py
todo_app/data/: ToDoItem.py  ViewModel.py  session_items.py  trello_items.py
todo_app/templates/: index.html
todo_app/tests/: integration_Test.py  test_file.py  unit_Test.py
